--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -37,6 +38,7 @@
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "openai": "^6.2.0",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
@@ -44,6 +46,7 @@
     "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "string-similarity": "^4.0.4",
+    "stripe": "^20.0.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -51,6 +54,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/string-similarity": "^4.0.2",
