--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@auth/prisma-adapter": "^2.11.0",
     "@google/generative-ai": "^0.24.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^6.17.1",
+    "@prisma/client": "5.19.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -38,7 +38,7 @@
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.10",
     "openai": "^6.2.0",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.1",
@@ -58,6 +58,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/string-similarity": "^4.0.2",
+    "prisma": "5.19.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
