--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "sonner": "^2.0.7",
     "string-similarity": "^4.0.4",
     "stripe": "^20.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
