--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fast-fuzzy": "^1.12.0",
     "framer-motion": "^12.23.24",
     "fuzzysort": "^3.1.0",
     "lucide-react": "^0.545.0",
